<resources>
    <string name="app_name">Calculator</string>
    <string name="history">History</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="clear">C</string>
    <string name="exponential">^</string>
    <string name="square">√</string>
    <string name="divide">÷</string>
    <string name="multi">×</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="delete">DEL</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="last_calculation">Last 10 calculations</string>
</resources>